<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.bankassistadmin.PrivacyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            android:elevation="4dp"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_head"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_head1"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_personal_info"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_personal_info_details"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_nonpersonal_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_nonpersonal_info_details"
            android:textSize="18dp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infocollect"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infocollectdetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infouse"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infopersonal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infopersonaldetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infononpersonal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infononpersonaldetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ThirdPart"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ThirdPartdetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/securitydetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amendmants"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amendmantsdetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policydetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacting"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactingdetails"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

    </LinearLayout>

</ScrollView>